--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,12 +1,12 @@
 # Path to sources
 sonar.sources=.
 #sonar.exclusions=
-sonar.inclusions=*.java
+sonar.inclusions=./**
 
 # Path to tests
 #sonar.tests=
 #sonar.test.exclusions=
-sonar.test.inclusions=*.java
+sonar.test.inclusions=./**
 
 # Source encoding
 #sonar.sourceEncoding=UTF-8
