--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,12 +1,14 @@
 # Path to sources
-sonar.sources=.
+sonar.sources=src
 #sonar.exclusions=
-sonar.inclusions=./**
+#sonar.inclusions=./**
 
 # Path to tests
 #sonar.tests=
 #sonar.test.exclusions=
-sonar.test.inclusions=./**
+#sonar.test.inclusions=./**
+
+sonar.language=java
 
 # Source encoding
 #sonar.sourceEncoding=UTF-8
