--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,14 +1,14 @@
 # Path to sources
 sonar.sources=src
 #sonar.exclusions=
-#sonar.inclusions=./**
+sonar.inclusions=src/**
 
 # Path to tests
 #sonar.tests=
 #sonar.test.exclusions=
 #sonar.test.inclusions=./**
 
-sonar.language=java
+#sonar.language=java
 
 # Source encoding
 #sonar.sourceEncoding=UTF-8
