--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,7 +1,7 @@
 # Path to sources
 sonar.sources=src
 #sonar.exclusions=
-sonar.inclusions=src/main/java/**/*.java
+sonar.inclusions=main/java/**/*.java
 
 # Path to tests
 #sonar.tests=
