--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -3,6 +3,16 @@
 #sonar.exclusions=
 #sonar.inclusions=main/java/**/*.java
 
+# Comma-separated paths to directories with sources (required)
+sonar.sources=src/main/java
+sonar.java.binaries=target/classes
+
+# Language
+sonar.language=java
+
+# Encoding of the source files
+sonar.sourceEncoding=UTF-8
+
 # Path to tests
 #sonar.tests=
 #sonar.test.exclusions=
