--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -4,8 +4,8 @@
 #sonar.inclusions=main/java/**/*.java
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=spring-boot-transactional-playground/src/main/java
-sonar.java.binaries=spring-boot-transactional-playground/target/classes
+sonar.sources=src/main/java
+sonar.java.binaries=target/classes
 
 # Language
 sonar.language=java
