--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -4,8 +4,8 @@
 #sonar.inclusions=main/java/**/*.java
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=src/main/java
-sonar.java.binaries=target/classes
+#sonar.sources=src/main/java
+#sonar.java.binaries=target/classes
 
 # Language
 sonar.language=java
