--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -6,6 +6,10 @@
 # Comma-separated paths to directories with sources (required)
 #sonar.sources=src/main/java
 #sonar.java.binaries=target/classes
+sonar.projectKey=sinisa229_spring-boot-transactional-playground
+sonar.organization=sinisa229
+sonar.host.url=https://sonarcloud.io
+sonar.login=e3a957e5d7c5213b60d9c93bec667661c92b1b31
 
 # Language
 sonar.language=java
