--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
 		<java.version>1.8</java.version>
 		<spring-boot-admin.version>2.0.0</spring-boot-admin.version>
 		<spring-cloud.version>Finchley.RC2</spring-cloud.version>
+		
+		<sonar.projectKey>sinisa229_spring-boot-transactional-playground</sonar.projectKey>
+                <sonar.organization>sinisa229</sonar.organization>
+                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+                <sonar.login>ff2f777bf0b98ecc4726dc85490e271ff6e5e72f</sonar.login>
 	</properties>
 
 	<dependencies>
